--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -20,3 +20,10 @@ models:
     snowplow_bq:
         base:
             materialized: ephemeral
+
+        vars:
+            "snowplow:context:web_page": null
+            "snowplow:context:submit_form:elements": null
+            "snowplow:context:submit_form": null
+            "snowplow:context:submit_form:classes": null
+            "snowplow:events_daily": null
