--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,4 +26,5 @@ models:
             "snowplow:context:submit_form:elements": null
             "snowplow:context:submit_form": null
             "snowplow:context:submit_form:classes": null
-            "snowplow:events_daily": null
+            "snowplow:event_daily": null
+            "snowplow:event_all": null
